finally fixed 100 vh on iOS

--- a/src/css/AppMainUI.css
+++ b/src/css/AppMainUI.css
@@ -70,3 +70,8 @@
 #dropdownUser1::after {
 	content: none;
 }
+
+/* fixes vh issue on iOS */
+.min-vh-100-fixed {
+	min-height: 100svh !important;
+}
